gitlab/13-gitlab-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
    type: statefulset
spec:
  serviceName: "gitlab"
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
      type: pod
  template:
    metadata:
      labels:
        app: gitlab
        type: pod
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ee:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 22
        - containerPort: 5050
        volumeMounts:
        - mountPath: /var/opt/gitlab
          name: data
        - mountPath: /var/log/gitlab
          name: logs
        - mountPath: /etc/gitlab
          name: config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
      - name: logs
        persistentVolumeClaim:
          claimName: logs
      - name: config
        persistentVolumeClaim:
          claimName: config
